--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,12 @@ hr.star-dark {
 }
 
 #hei-final {
-  padding-top: 50px;
+  padding-top: 30px;
+}
+
+#review_form{
+  height: 100vh;
+  width: 100%;
 }
 
 .degree-program-font{
