--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,7 +432,15 @@ hr.star-dark {
   height: 25px;
 }
 
-#review-form{
-  overflow-y: hidden; /* Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+/* #review-form{
+  overflow-y: hidden; 
+  overflow-x: hidden;
+} */
+
+iframe {
+  display: block;       /* iframes are inline by default */
+  background: #000;
+  border: none;         /* Reset default border */
+  height: 100vh;        /* Viewport-relative units */
+  width: 100vw;
 }
