--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,10 @@ hr.star-dark {
   margin-bottom: 10px;
 }
 
+#hei-final {
+  padding-top: 150px;
+}
+
 .degree-program-font{
   font-size: 12px;
 }
