--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,9 +419,9 @@ hr.star-dark {
   margin-bottom: 10px;
 }
 
-#hei-final {
+/* #hei-final {
   padding-top: 5px;
-}
+} */
 
 .degree-program-font{
   font-size: 12px;
